Menu flicker fix

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,7 +1,7 @@
 /* ---------- Hero Section ---------- */
 
 .carousel-item img {
-    filter: brightness(95%);
+    filter: brightness(90%);
 }
 
 /* ---------- Jarallax images ---------- */
