--- a/css/nav.css
+++ b/css/nav.css
@@ -45,7 +45,7 @@
 .navbar {
     position: absolute;
     width: 100%;
-    z-index: 100;
+    z-index: 2;
 }
 
 /* navbar collapse center text */
